# financial-rag-analyzer

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.cargo/: config.toml
sample_data/: apple_10k_sample.txt
src/: auth.rs  config.rs  document_processor.rs  document_queue.rs  embeddings.rs  main.rs  rag_pipeline.rs  server.rs  vector_store.rs
static/: index.html
