[package]
name = "financial-rag"
version = "0.1.0"
edition = "2021"
description = "AI-Powered Financial Document Analyzer using RAG (Retrieval-Augmented Generation)"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["multipart", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
pdf-extract = "0.7"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
rusttype = "0.3"

[profile.release]
opt-level = 3